# inventory-manager

./: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: docker.yml
src/: app.py  db_init.py
src/db/: category.py  item.py  location.py
src/routes/: category.py  index.py  item.py  location.py
src/static/: category.css  generic.css  item.css  layout.css  popup.css
src/templates/: category.html  components.html  help.html  index.html  item.html  layout.html  location.html  macros.html  not_found.html  popup.html
