[tool.poetry]
name = "inventory-manager"
version = "0.1.0"
description = ""
authors = ["Oskar Vihriälä <oskar.vihriala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
