[tool.poetry]
name = "inventory-manager"
version = "1.0.0"
description = ""
authors = ["Oskar Vihriälä <oskar.vihriala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
profile = "black"
